# python-run_binary-issue

./: BUILD  MODULE.bazel  README.md  hello.py  shell.nix
